--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RGR</title>
+  <title>Language Chat</title>
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="react"></div>
