before removing flags

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Language Chat</title>
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="animate.css">
 </head>
 <body>
   <div id="react"></div>
